# NeuroStream

./: .gitignore  Analysis_Report.md  CLAUDE.md  CMakeLists.txt  Design_Detail.md  LICENSE  PROJECT_PLAN.md  README.md  config.yaml  run.bin.fifo  run.bin.qos
.github/workflows/: ci.yml
docs/: scenario-schema.md
include/neurostream/: clock.hpp  config.hpp  event_queue.hpp  injector.hpp  latency_histogram.hpp  npu_cache.hpp  predictor.hpp  report_writer.hpp  scenario.hpp  scheduler.hpp  time.hpp  trace.hpp  trace_sink.hpp  transaction.hpp
scenarios/: backward.yaml  cache_pressure.md  cache_pressure.yaml  degrade.md  degrade.yaml  demo.md  demo.yaml  interrupted.yaml  look_around.yaml  mixed.yaml  stress.md  stress.yaml  town.md  town.yaml  world.md  world.yaml
src/: config.cpp  injector.cpp  latency_histogram.cpp  main.cpp  npu_cache.cpp  predictor.cpp  report_writer.cpp  scenario.cpp  scheduler.cpp  trace.cpp
tests/: CMakeLists.txt  compression_test.cpp  config_test.cpp  dma_test.cpp  event_queue_test.cpp  injector_test.cpp  intent_test.cpp  npu_cache_test.cpp  phase8_integration_test.cpp  predictor_test.cpp  report_test.cpp  scenario_test.cpp  scheduler_test.cpp  smoke_test.cpp  trace_test.cpp
tests/data/: bad_lod_scenario.yaml  legacy_scenario.yaml  legacy_v2_scenario.yaml  missing_field_config.yaml  missing_field_scenario.yaml  valid_config.yaml  valid_scenario.yaml
